[Debug] ASSERTION FAILED: !flow.spannerMap().get(placeholder->spanner()) in `fast/multicol/span/float-becomes-spanner-crash.html` https://bugs.webkit.org/show_bug.cgi?id=278100

Reviewed by Alan Baradlay.

Prevent multicolumn spanner placeholder from being added to the spanner
map twice when splitting an inline flow.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/updating/RenderTreeBuilderInline.cpp:
(WebCore::RenderTreeBuilder::Inline::splitFlow):

Canonical link: https://commits.webkit.org/282788@main